locate/testdata/typeerror/error.go
package typerror

var x int = "a string"
